Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-98007

Designer puppet crashes at startup

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.2.2
    • 6.2.1
    • Quick: 3D
    • None
    • acb462b7c7493c6379e08b762b8a37e20db8bc69 eb09cd7e1812873e237cde105db6a92273290f9a

      The designer edit mode puppet sometimes crashes at startup multiple times after before eventually showing the view. The crash happens in quick3dmodel when connection to geometry calls markDirty for destroyed model. The model should disconnect from the geometry when it is destroyed.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            anmaatta Antti Määttä
            anmaatta Antti Määttä
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes