Disconnect geometry connection in model destructor

Task-number: QTBUG-98007
Pick-to: 6.2
Change-Id: Id8b47464bea78b3dbf24781974d4b766f131ad3e
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Tony Leinonen <tony.leinonen@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>